// Vitest Snapshot v1

exports[`Pagination > Pagination baseVue demo works fine 1`] = `
<div>
  <t-pagination
    page-size="5"
    total="36"
  />
  <br />
  <br />
  <t-pagination
    default-current="2"
    default-page-size="10"
    showfirstandlastpagebtn=""
    total="36"
  />
</div>
`;

exports[`Pagination > Pagination customizableVue demo works fine 1`] = `
<div>
  <t-pagination
    page-size="20"
    page-size-options="10,20,30,100,200"
    show-jumper=""
    show-sizer=""
    total="200"
  />
</div>
`;

exports[`Pagination > Pagination disabledVue demo works fine 1`] = `
<div>
  <t-pagination
    disabled=""
    page-size="5"
    show-jumper=""
    show-sizer=""
    total="100"
  />
</div>
`;

exports[`Pagination > Pagination fewVue demo works fine 1`] = `
<div>
  <t-pagination
    on-change="function () { [native code] }"
    page-size="10"
    total="49"
  />
</div>
`;

exports[`Pagination > Pagination jumpVue demo works fine 1`] = `
<div>
  <t-pagination
    page-size="20"
    show-jumper=""
    total="101"
  />
</div>
`;

exports[`Pagination > Pagination miniVue demo works fine 1`] = `
<div>
  <t-pagination
    page-size="5"
    size="small"
    total="100"
  />
</div>
`;

exports[`Pagination > Pagination moreVue demo works fine 1`] = `
<div>
  <span>
    展示首尾页码省略
  </span>
  <t-pagination
    page-size="5"
    total="100"
  />
  <span>
    不展示首尾页码省略
  </span>
  <t-pagination
    page-ellipsis-mode="both-ends"
    page-size="5"
    total="100"
  />
</div>
`;

exports[`Pagination > Pagination pageNumVue demo works fine 1`] = `
<div>
  <t-pagination
    on-page-size-change="function () { [native code] }"
    page-size="30"
    page-size-options="[object Object],[object Object],[object Object],[object Object]"
    show-sizer=""
    total="645"
  />
</div>
`;

exports[`Pagination > Pagination simpleMiniVue demo works fine 1`] = `
<t-pagination
  page-size="5"
  size="small"
  theme="simple"
  total="100"
/>
`;

exports[`Pagination > Pagination simpleVue demo works fine 1`] = `
<div>
  <t-pagination
    page-size="5"
    theme="simple"
    total="100"
  />
</div>
`;

exports[`Pagination > Pagination totalVue demo works fine 1`] = `
<div>
  <t-pagination
    page-size="10"
    total="685"
    totalcontent="function () { [native code] }"
  />
</div>
`;
